--- a/ZendeskSDKUIComponents.xcframework/ios-arm64_x86_64-simulator/ZendeskSDKUIComponents.framework/Localizable/fr-CA.lproj/Localizable.strings
+++ b/ZendeskSDKUIComponents.xcframework/ios-arm64_x86_64-simulator/ZendeskSDKUIComponents.framework/Localizable/fr-CA.lproj/Localizable.strings
@@ -15,10 +15,10 @@
 "zma_form_dropdown_field_accessibility_label" = "Liste déroulante avec %@ choix";
 "zma_form_dropdown_singular_field_accessibility_label" = "Liste déroulante avec 1 choix";
 "zma_form_entry_error" = "Erreur de champ de formulaire %@ :";
-"zma_guide_article_view_attachment_carousel_accessibility_hint" = "Toucher deux fois pour ouvrir";
+"zma_guide_article_view_attachment_carousel_accessibility_hint" = "Touchez deux fois pour ouvrir";
 "zma_guide_article_view_attachment_carousel_accessibility_label" = "Élément de pièce jointe";
 "zma_guide_article_view_attachment_carousel_accessibility_value" = "%@, type : %@, taille : %@";
-"zma_guide_feedback_banner_label" = "Cet article vous a-t-il été utile ?";
+"zma_guide_feedback_banner_label" = "Cet article vous a-t-il été utile?";
 "zma_guide_feedback_banner_no_button" = "Non";
 "zma_guide_feedback_banner_yes_button" = "Oui";
 "zma_guide_page_failed_label" = "Échec du chargement de la page";
